funcionalidad para pantalla de print query

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -186,3 +186,11 @@ btnAceptar=Aceptar
 btnCancelar=Cancelar
 #XBUT:
 CompleteBalance=Completar Saldos
+
+#=====================================Consulta de Movimientos===============================
+#XTIT: Worklist view title
+Movements=Consulta de movimientos
+FechaConta= Fec. Contabilización
+FechDocto= Fec. Documento
+Banco=Banco
+btnExcel=Descagar Excel
