se complementan campos faltantes

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -194,3 +194,5 @@ FechaConta= Fec. Contabilización
 FechDocto= Fec. Documento
 Banco=Banco
 btnExcel=Descagar Excel
+HoraDocto=Hora Documento
+Usuario=Usuario
