se agregan campos de status chec¿kin y seguimiento

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -198,3 +198,5 @@ HoraDocto=Hora Documento
 Usuario=Usuario
 btnPDF=Descagar PDF
 ImporteCheckin=Importe Check In
+StatusCheckIN = Estatus Check In
+Seg=Núm. Seguimiento
